<resources>
    <string name="app_name">COMESA News</string>
    <string name="error_message">No internet connection. Check your mobile data or WI-FI.</string>
    <string name="content_authority">com.android.example.comesapp</string>
    <!--Used in overflow menu to contact us-->
    <string name="action_contact_us">Contact us</string>
    <string name="activity_name">Top Stories</string>
    <!-- Title of the DetailNewsActivity -->
    <string name="title_activity_detail">COMESA News</string>
    <!-- Copyright text view content-->
    <string name="detail_copyright">Copyright © 2019 COMESA</string>
    <!-- string for Settings -->
    <string name="action_settings">Settings</string>
    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_last_notification">last_notification</string>
    <!--Strings related to some parameters for the notification builder-->
    <string name="notification_channel_name">News Notification</string>
    <string name="notification_channel_description">Notification from COMESA News</string>
    <!--Strings related to the notification flag-->
    <string name="pref_last_notification_flag">last_notification_flag</string>

    <!--Strings related to the events flag-->
    <string name="pref_last_event_title_flag">last_event_title_flag</string>

    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>

    <string name="events">Events</string>
    <string name="opportunities">Opportunities</string>

    <!-- Hint text display in the empty field for the attendee's name, organization and country [CHAR LIMIT=20] -->
    <string name="name">Name</string>
    <!-- Hint text display in the empty field for the attendee's name [CHAR LIMIT=20] -->
    <string name="org_name">Organization</string>
    <!-- Hint text display in the empty field for the attendee's name [CHAR LIMIT=20] -->
    <string name="country_name">Country</string>

    <!-- Text display on the submit button [CHAR LIMIT=20] -->
    <string name="submit">Submit</string>
</resources>
