<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendEventActivity">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="72dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/org_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_field"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/org_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/country_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/org_field"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/country_name"
            android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/country_field"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:text="@string/submit" />

    <TextView
        android:id="@+id/detail_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="sans-serif"
        android:paddingBottom="24dp"
        android:text="@string/detail_copyright"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_news_toolbar"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_arrow_back_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif"
                    android:paddingTop="8dp"
                    android:text="Attend Event"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

</RelativeLayout>
